# pixelwindow

./: CMakeLists.txt  LICENSE.md  README.md
demos/basic/: CMakeLists.txt  main.cpp
demos/common/: util.h
include/pixelwindow/: window.h
